--- a/jeopardy.css
+++ b/jeopardy.css
@@ -14,6 +14,54 @@ body {
     justify-content: center;
     color: black;
 }
+.navbar {
+    background-color: orange;
+    width: 100%;
+    height: 8%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.user-container {
+    color: #007bff; /* Change the text color to blue */
+    font-weight: bold; /* Make the text bold */
+    font-size: 200%; /* Double the font size */
+    padding: 10px 5%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+}
+/* Styles for the user's score container */
+.user-score {
+    color: #007bff; /* Change the text color to blue */
+    font-weight: bold; /* Make the text bold */
+    font-size: 200%; /* Double the font size */
+    padding: 10px 5%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+}
+
+
+/* Styles for the log out button */
+.logout-button {
+    color: #007bff;
+	font-weight: bold; /* Make the text bold */
+    font-size: 200%; /* Double the font size */
+    text-decoration: none;
+    padding: 10px 5%; /* Adjusted width to 10% of the navbar width */
+    background-color: orange;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    height: 50%; /* Set height to 50% of the navbar height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logout-button:hover {
+    background-color: orange;
+}
 h1 {
     color: goldenrod;
     text-shadow: 2px 2px 4px #000;
