--- a/leaderboard.css
+++ b/leaderboard.css
@@ -35,3 +35,65 @@ caption {
         font-weight: bold;
         font-size: 3.0em;
 }
+.navbar {
+    position: fixed;
+    top: 0;
+    background-color: orange;
+    width: 100%;
+    height: 4%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.user-container {
+    color: #007bff; /* Change the text color to blue */
+    font-weight: bold; /* Make the text bold */
+    font-size: 200%; /* Double the font size */
+    padding: 10px 5%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+}
+/* Styles for the user's score container */
+.user-score {
+    color: #007bff; /* Change the text color to blue */
+    font-weight: bold; /* Make the text bold */
+    font-size: 200%; /* Double the font size */
+    padding: 10px 5%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+}
+/* Styles for the leaderboard container */
+.leaderboard-container {
+    color: #007bff; /* Change the text color to blue */
+    font-weight: bold; /* Make the text bold */
+    font-size: 200%; /* Double the font size */
+    padding: 10px 5%;
+    background-color: orange;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Center it if it's the only element, adjust as necessary */
+}
+/* Styles for the log out button */
+.logout-button {
+    color: #007bff;
+	font-weight: bold; /* Make the text bold */
+    font-size: 200%; /* Double the font size */
+    text-decoration: none;
+    padding: 10px 5%; /* Adjusted width to 10% of the navbar width */
+    background-color: orange;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    height: 50%; /* Set height to 50% of the navbar height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.logout-button:hover {
+    background-color: orange;
+}
+.leaderboard-container:hover {
+    background-color: orange;
+}
