--- a/leaderboard.css
+++ b/leaderboard.css
@@ -76,24 +76,26 @@ caption {
     align-items: center;
     justify-content: center; /* Center it if it's the only element, adjust as necessary */
 }
-/* Styles for the log out button */
-.logout-button {
+/* Styles for the log out button and home button */
+.logout-button, .home-button {
     color: #007bff;
-	font-weight: bold; /* Make the text bold */
-    font-size: 200%; /* Double the font size */
+    font-weight: bold;
+    font-size: 200%;
     text-decoration: none;
-    padding: 10px 5%; /* Adjusted width to 10% of the navbar width */
+    padding: 10px 5%;
     background-color: orange;
     border-radius: 5px;
     transition: background-color 0.3s;
-    height: 50%; /* Set height to 50% of the navbar height */
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.logout-button:hover {
+
+.logout-button:hover, .home-button:hover {
     background-color: orange;
 }
+
 .leaderboard-container:hover {
     background-color: orange;
 }
