--- a/jeopardy.css
+++ b/jeopardy.css
@@ -17,7 +17,7 @@ body {
 .navbar {
     background-color: orange;
     width: 100%;
-    height: 8%;
+    height: 8vh;
     display: flex;
     align-items: center;
     justify-content: center;
