--- a/leaderboard.css
+++ b/leaderboard.css
@@ -40,7 +40,7 @@ caption {
     top: 0;
     background-color: orange;
     width: 100%;
-    height: 4%;
+    height: 4vh;
     display: flex;
     align-items: center;
     justify-content: center;
